# ChangeLog for media-video/qc-usb-messenger
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/qc-usb-messenger/Attic/ChangeLog,v 1.1 2006/12/07 19:30:29 zzam Exp $

*qc-usb-messenger-1.5 (07 Dec 2006)

  07 Dec 2006; Matthias Schwarzott <zzam@gentoo.org>
  +files/qc-usb-messenger-2.6.19.patch,
  +files/qc-usb-messenger-koutput.patch, +metadata.xml,
  +qc-usb-messenger-1.5.ebuild:
  Initial import of ebuild, based on qc-usb, modified and maintained by Samuli
  Suominen <sasuomin@uusikaupunki.fi>.
