@@ -10,14 +10,14 @@ MD5 b339fbee37b71efebb7c6dc7542da7ad files/qc-usb-messenger-koutput.patch 2424
 RMD160 8e061adb423e6a78900160c7f66fdf2fa9ced872 files/qc-usb-messenger-koutput.patch 2424
 SHA256 ec6d308f351830f06bce785314a860424ce045e737c3bafddc9b8532f0a4e63f files/qc-usb-messenger-koutput.patch 2424
 DIST qc-usb-messenger-1.5.tar.gz 167203 RMD160 e885b6d3c0508964df1ca81805435ebe996fba13 SHA1 c152ad98cf1b9684bee8350860d84c0d197bc76f SHA256 b5b0d23bffdb2edb8c7a0baeed704c41e327d61279190e309701ed4a39ad4c02
-EBUILD qc-usb-messenger-1.5.ebuild 1070 RMD160 d01d6172b56417653a897c3425b6ed2bb576a745 SHA1 80c9d24d8faa5b76f71cecd90a8f7f8caf997f69 SHA256 a2d64a5fb405fb3bf0b4fe4b1856643757e3bf74751edadf2c6984dcad653e92
-MD5 0c5319247fd627815d8b6a315489773e qc-usb-messenger-1.5.ebuild 1070
-RMD160 d01d6172b56417653a897c3425b6ed2bb576a745 qc-usb-messenger-1.5.ebuild 1070
-SHA256 a2d64a5fb405fb3bf0b4fe4b1856643757e3bf74751edadf2c6984dcad653e92 qc-usb-messenger-1.5.ebuild 1070
-MISC ChangeLog 564 RMD160 bd05607e9630565947cb70508b796e074fe35f8c SHA1 97059e4cda237f93a88c973fd1e6d4b1e8d05d4e SHA256 65fc7499453217c674e81c7045ee3bbe33f7bb536a26e0d0ad863f9231009799
-MD5 3f9c9323452b3eb57fffd58406f57632 ChangeLog 564
-RMD160 bd05607e9630565947cb70508b796e074fe35f8c ChangeLog 564
-SHA256 65fc7499453217c674e81c7045ee3bbe33f7bb536a26e0d0ad863f9231009799 ChangeLog 564
+EBUILD qc-usb-messenger-1.5.ebuild 1123 RMD160 8876b86db4855311cccde6716d88518ca6ec439f SHA1 deb515b92ea6af96b19f3addd8baf6af9a2e1c98 SHA256 c238efe458aa679216a509ceaf6f0295e04df57e1735aafb4e34693ba3619763
+MD5 38da8aea220f8a1d7d2ce517b2062a34 qc-usb-messenger-1.5.ebuild 1123
+RMD160 8876b86db4855311cccde6716d88518ca6ec439f qc-usb-messenger-1.5.ebuild 1123
+SHA256 c238efe458aa679216a509ceaf6f0295e04df57e1735aafb4e34693ba3619763 qc-usb-messenger-1.5.ebuild 1123
+MISC ChangeLog 715 RMD160 af18d9d2b22817e9c913c83a7e87f1c742232829 SHA1 9584e0fc407ba7a294c3a4ba605706561d2e6e50 SHA256 6af9db54917f5efbde3959122b68f90c1692e01a1ae784c21a7bc89e27692987
+MD5 b2f665e3a07a62a7d2cfb1d222c5772a ChangeLog 715
+RMD160 af18d9d2b22817e9c913c83a7e87f1c742232829 ChangeLog 715
+SHA256 6af9db54917f5efbde3959122b68f90c1692e01a1ae784c21a7bc89e27692987 ChangeLog 715
 MISC metadata.xml 452 RMD160 c2512806b03a630259a60ac28a7391e8d6ae3286 SHA1 8a9168a8da35df17569522ac83836697663c75c9 SHA256 29195b0377bf3106dc41f0166f2cfcd65a4dec025093f11a518484ab27909f7e
 MD5 48d3d85699da9980ac3672ef0b14252f metadata.xml 452
 RMD160 c2512806b03a630259a60ac28a7391e8d6ae3286 metadata.xml 452
@@ -28,7 +28,7 @@ SHA256 a20abe722692ea018623aab8a6d569ac67472c224f3703a483feb6196ab3eb21 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFFeGvmt2vP6XvVdOcRAnTZAJ402IxgfpgBEp+y3qWM83V2DHl72ACgirhx
-S0LFKBb/fJ2k4TVZOaGpvlw=
-=Am+/
+iD8DBQFFe8art2vP6XvVdOcRAnzdAJ9oqOy0rwIQQEAnb7hOeMkxCDD00gCginlS
+8tAHrKOv3hDrpMCAMRoIIws=
+=ehiP
 -----END PGP SIGNATURE-----
