@@ -1,6 +1,10 @@
 # ChangeLog for media-video/qc-usb-messenger
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/qc-usb-messenger/Attic/ChangeLog,v 1.1 2006/12/07 19:30:29 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/qc-usb-messenger/Attic/ChangeLog,v 1.2 2006/12/10 08:34:45 zzam Exp $
+
+  10 Dec 2006; Matthias Schwarzott <zzam@gentoo.org>
+  qc-usb-messenger-1.5.ebuild:
+  Added depend to virtual/linux-sources and block against qc-usb.
 
 *qc-usb-messenger-1.5 (07 Dec 2006)
 
